--- a/index.html
+++ b/index.html
@@ -7,65 +7,65 @@
     <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="images/pwa-icon-152x152.png" />
+    <link rel="apple-touch-icon" href="images/icons/pwa-icon-152x152.png" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar" content="#db4938" />
     <meta name="theme-color" content="#db4938" />
     <meta name="apple-mobile-web-app-title" content="PWA PIAC" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-    <link rel="apple-touch-icon" href="images/pwa-icon-152x152.png" />
+    <link rel="apple-touch-icon" href="images/icons/pwa-icon-152x152.png" />
     <link
       rel="apple-touch-startup-image"
-      href="images/apple-splash-640x1136.png"
+      href="images/icons/apple-splash-640x1136.png"
       media="(device-
 width: 320px) and (device-height: 568px)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="images/apple-splash-750x1334.png"
+      href="images/icons/apple-splash-750x1334.png"
       media="(device-
 width: 375px) and (device-height: 667px)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="images/apple-splash-828x1792.png"
+      href="images/icons/apple-splash-828x1792.png"
       media="(device-
 width: 414px) and (device-height: 896px)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="images/apple-splash-1125x2436.png"
+      href="images/icons/apple-splash-1125x2436.png"
       media="(device-
 width: 375px) and (device-height: 812px)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="images/apple-splash-1242x2688.png"
+      href="images/icons/apple-splash-1242x2688.png"
       media="(device-
 width: 414px) and (device-height: 896px)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="images/apple-splash-1536x2048.png"
+      href="images/icons/apple-splash-1536x2048.png"
       media="(min-
 device-width: 768px) and (max-device-width: 1024px)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="images/apple-splash-1668x2224.png"
+      href="images/icons/apple-splash-1668x2224.png"
       media="(min-
 device-width: 834px) and (max-device-width: 1112px)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="images/apple-splash-1668x2388.png"
+      href="images/icons/apple-splash-1668x2388.png"
       media="(min-
 device-width: 834px) and (max-device-width: 1194px)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="images/apple-splash-2048x2732.png"
+      href="images/icons/apple-splash-2048x2732.png"
       media="(min-
 device-width: 1024px) and (max-device-width: 1366px)"
     />
@@ -73,11 +73,8 @@ device-width: 1024px) and (max-device-width: 1366px)"
   <body>
     <div class="container">
       <main>
-        <h1 class="title">Hello World!</h1>
-        <p>
-          Lorem Ipsum is simply dummy text of the printing and typesetting
-          industry...
-        </p>
+        <h1 class="title">Dogs</h1>
+        <p>Dogs dogs dogs</p>
       </main>
     </div>
     <script src="js/main.js"></script>
