--- a/index.html
+++ b/index.html
@@ -77,6 +77,6 @@ device-width: 1024px) and (max-device-width: 1366px)"
         <p>Dogs dogs dogs</p>
       </main>
     </div>
-    <script src="src/main.js"></script>
+    <script src="dist/bundle.js" type="module"></script>
   </body>
 </html>
