fix: notifications should work now

--- a/index.html
+++ b/index.html
@@ -73,10 +73,11 @@ device-width: 1024px) and (max-device-width: 1366px)"
   <body>
     <div class="container">
       <main>
-        <h1 class="title">Dogs</h1>
+        <h1 class="title">Dogs and cats</h1>
         <p>Dogs dogs dogs</p>
       </main>
     </div>
-    <script src="./js/main.js" type="module"></script>
+    <button id="enable-notifications-button">Enable notifications</button>
+    <script type="module" src="./js/main.js"></script>
   </body>
 </html>
