feat: cats and dogs images

--- a/index.html
+++ b/index.html
@@ -75,9 +75,19 @@ device-width: 1024px) and (max-device-width: 1366px)"
       <main>
         <h1 class="title">Dogs and cats</h1>
         <p>Dogs dogs dogs</p>
+        <div>
+          <img src="images/dog1.jpg" class="dog-image" />
+          <img src="images/dog2.jpg" class="dog-image" />
+          <img src="images/dog3.jpg" class="dog-image" />
+          <img src="images/dog4.jpg" class="dog-image" />
+          <img src="images/dog5.jpg" class="dog-image" />
+        </div>
+        <a href="cats.html">Visit cats</a>
+        <div>
+          <button id="enable-notifications-button">Enable notifications</button>
+        </div>
       </main>
     </div>
-    <button id="enable-notifications-button">Enable notifications</button>
     <script type="module" src="./js/main.js"></script>
   </body>
 </html>
