--- a/cats.html
+++ b/cats.html
@@ -20,10 +20,10 @@
         <h1 class="title">Cats cats cats</h1>
         <p>Cats in the number: four</p>
         <div>
-          <img src="images/cat1.webp" class="dog-image" />
-          <img src="images/cat2.webp" class="dog-image" />
-          <img src="images/cat3.webp" class="dog-image" />
-          <img src="images/cat4.webp" class="dog-image" />
+          <img src="images/cat1.webp" class="dog-image" alt="image of 4 cats" />
+          <img src="images/cat2.webp" class="dog-image" alt="image of 4 cats" />
+          <img src="images/cat3.webp" class="dog-image" alt="image of 4 cats" />
+          <img src="images/cat4.webp" class="dog-image" alt="image of 4 cats" />
         </div>
         <a href="index.html">Visit dogs</a>
       </main>
