--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@ device-width: 1024px) and (max-device-width: 1366px)"
         <h1 class="title">Dogs and cats</h1>
         <p>Dogs dogs dogs</p>
         <div>
-          <img src="images/dog1.webp" class="dog-image" />
-          <img src="images/dog2.webp" class="dog-image" />
-          <img src="images/dog3.webp" class="dog-image" />
-          <img src="images/dog4.webp" class="dog-image" />
-          <img src="images/dog5.webp" class="dog-image" />
+          <img src="images/dog1.webp" class="dog-image" alt="image of dog" />
+          <img src="images/dog2.webp" class="dog-image" alt="image of dog" />
+          <img src="images/dog3.webp" class="dog-image" alt="image of dog" />
+          <img src="images/dog4.webp" class="dog-image" alt="image of dog" />
+          <img src="images/dog5.webp" class="dog-image" alt="image of dog" />
         </div>
         <a href="cats.html">Visit cats</a>
         <div>
