feat: incredible seo

--- a/cats.html
+++ b/cats.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cats - PWA PIAC TEST</title>
+    <meta name="description" content="Beatiful cats" />
+    <meta name="keywords" content="cat, cats, dog" />
+    <meta name="author" content="Mikołaj Kubś" />
     <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
